Updated header html & CSS to account for layout issues when various elements were disabled

--- a/ie.css
+++ b/ie.css
@@ -46,8 +46,5 @@ td.menu-disabled {
 .node-full-view .node-inner-2,
 .node-full-view .node-inner-3 { background: none; }
 
-
-
-
-
+.with-logo #primary-inner {  margin: 0;}
 
