--- a/layout.css
+++ b/layout.css
@@ -85,28 +85,32 @@ ul.images li h3,
 }
 
 #head-elements {
-/*  float: left;
-  width: auto;*/
-  margin: 0 0 10px 15px;
+  height: 94px;
+  margin: 0 0 0 15px;
   padding: 0;
 }
 
 #branding {
-  /*height: 80px;*/
-  margin: 0 0 0 15px;
+  padding: 0;
+  margin: 0;
 }
 
 h1#site-name,
 div#site-name {
   margin: 0;
-  padding: 15px 0 0 0;
+  padding: 10px 0 0 0;
   font-size: 2.6em;
   line-height: 1.3em;
 }
 
 #site-slogan {
   padding: 0;
-  margin: 0;
+  margin:  0;
+}
+
+#site-slogan em{
+  font-style: normal;
+  margin: 0 0 0 0;
 }
 
 /*-------------------------------------------------------------------*/
@@ -190,14 +194,13 @@ div#site-name {
 /*-------------------------------------------------------------------*/
 #search-box {
   float: right;
-  margin: -56px 10px 0pt 0pt; /* pull the search box into position */
+  margin: 35px 10px 0pt 0pt; /* pull the search box into position */
   padding: 0;
   vertical-align: center;
 }
 
 div#search {
-  margin-right: 10px;
-  margin-top: 26px;	/* this is a MUST for Safari */
+  margin: 0 10px 0 0;
 }
 /*-------------------------------------------------------------------*/
 /*                             Primary                               */
@@ -205,8 +208,12 @@ div#search {
 #primary {
   width: 100%;
   margin: 0 -100% 0 0; /* margin-right = negative value of #navbar's width + left margin. */
-  padding: 16px 0 0;
+  padding: 0;
 }
+
+#primary-inner {  margin: 0 0 0 15px;}
+
+#primary ul { margin: 0;}
 
 #primary ul li.first { 
   padding-left: 0; 
